objects/Rating_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Bounce_Daypart__c</fullName>
        <label>Bounce Daypart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MF 6A-8A</fullName>
                </value>
                <value>
                    <fullName>MF 8A-4P</fullName>
                </value>
                <value>
                    <fullName>MF 4P-7P</fullName>
                </value>
                <value>
                    <fullName>MS 7P-11P</fullName>
                </value>
                <value>
                    <fullName>MS 11P-1A</fullName>
                </value>
                <value>
                    <fullName>SS 11A-7P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <label>Demo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HH</fullName>
                </value>
                <value>
                    <fullName>A18+</fullName>
                </value>
                <value>
                    <fullName>A18-34</fullName>
                </value>
                <value>
                    <fullName>A18-49</fullName>
                </value>
                <value>
                    <fullName>A25-34</fullName>
                </value>
                <value>
                    <fullName>A25-49</fullName>
                </value>
                <value>
                    <fullName>A25-54</fullName>
                </value>
                <value>
                    <fullName>A35-64</fullName>
                </value>
                <value>
                    <fullName>A25+</fullName>
                </value>
                <value>
                    <fullName>A35+</fullName>
                </value>
                <value>
                    <fullName>A50+</fullName>
                </value>
                <value>
                    <fullName>A55+</fullName>
                </value>
                <value>
                    <fullName>A65+</fullName>
                </value>
                <value>
                    <fullName>M18+</fullName>
                </value>
                <value>
                    <fullName>M18-34</fullName>
                </value>
                <value>
                    <fullName>M18-49</fullName>
                </value>
                <value>
                    <fullName>M25-49</fullName>
                </value>
                <value>
                    <fullName>M25-54</fullName>
                </value>
                <value>
                    <fullName>M35-64</fullName>
                </value>
                <value>
                    <fullName>M25+</fullName>
                </value>
                <value>
                    <fullName>M35+</fullName>
                </value>
                <value>
                    <fullName>M50+</fullName>
                </value>
                <value>
                    <fullName>M55+</fullName>
                </value>
                <value>
                    <fullName>M65+</fullName>
                </value>
                <value>
                    <fullName>W18+</fullName>
                </value>
                <value>
                    <fullName>W18-34</fullName>
                </value>
                <value>
                    <fullName>W18-49</fullName>
                </value>
                <value>
                    <fullName>W25-49</fullName>
                </value>
                <value>
                    <fullName>W25-54</fullName>
                </value>
                <value>
                    <fullName>W35-64</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impressions_000__c</fullName>
        <description>In thousands</description>
        <label>Impressions (000)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Rank__c</fullName>
        <formula>Station__r.Market__r.Market_Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Station__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <formula>Station__r.Market__r.DMA_Rank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Header__c</fullName>
        <label>Rating Header</label>
        <referenceTo>Rating_Header__c</referenceTo>
        <relationshipLabel>Rating Details</relationshipLabel>
        <relationshipName>Rating_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Station</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>Rating Details</relationshipLabel>
        <relationshipName>Rating_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>US_HH__c</fullName>
        <formula>Station__r.US_HH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US HH%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Rating Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Rating_Header__c</columns>
        <columns>NAME</columns>
        <columns>Market_Rank__c</columns>
        <columns>US_HH__c</columns>
        <columns>Rating__c</columns>
        <columns>Station__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RD-{000000}</displayFormat>
        <label>Rating Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>